# markrender

./: .gitignore  LICENSE  README.md  check_truecolor.py  pyproject.toml  reproduce_colors.py  reproduce_failures.py  requirements.txt  setup.py  test.md  test.py  test_emoji_note.py
examples/: basic_usage.py  complete_showcase.py  definition_lists.py  footnotes.py  highlights.py  link_highlighting.py  mermaid_diagrams.py  new_features_demo.py  progress_bars.py  streaming_demo.py  theme_showcase.py  v1_0_7_showcase.py
markrender/: __init__.py  __main__.py  cli.py  colors.py  config.py  formatters.py  parser.py  renderer.py  themes.py
tests/: debug_output.py  reproduce_code_block_colors.py  test_colors.py  test_emoji_note.py  test_enhancements.py  test_formatters.py  test_inline_formatting_contexts.py  test_new_features.py  test_parser.py  test_renderer.py  test_renderer_edge_cases.py  test_v1_0_5_features.py  verify_fixes.py
